--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
-# Permalinks
-permalink:        pretty
-
 # Setup
 title:            CoMPAS Architecture
 tagline:          'Architecture of the CoMPAS project'
 baseurl:          /
 
-paginate:         5
+gems:           [jekyll-paginate]
+paginate:       5
+paginate_path:  "page:num"
 
 # Custom vars
 version:          0.0.1
