Added paginator functionality
Signed-off-by: Rob Tjalma <rob@tjalma.com>

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 title:            CoMPAS Architecture
 tagline:          'Architecture of the CoMPAS project'
 
+paginate:       5
+
 # Custom vars
 version:          0.0.1
 
