--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,6 @@ version:          0.0.1
 
 github:
   repo:           https://github.com/com-pas/compas-architecture
+
+github_username:  com-pas
+git_repo:         compas-architecture
