--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ github_username:  Flurb
 git_repo:         compas-architecture
 git_branch:       PAGES
 
-baseurl:          /{{ git_repo }}/
+baseurl:          /compas-architecture/
