Added Github Pages
Signed-off-by: Rob Tjalma <rob@tjalma.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,17 @@
-theme: jekyll-theme-minimal
+# Setup
+title:            CoMPAS Architecture
+tagline:          'Architecture of the CoMPAS project'
+
+paginate:         5
+
+# Custom vars
+version:          0.0.2
+
+github:
+  repo:           https://github.com/com-pas/compas-architecture
+
+github_username:  com-pas
+git_repo:         compas-architecture
+git_branch:       master
+
+baseurl:          /compas-architecture/
