--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: 2021 Alliander N.V.
 #
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: CC-BY-4.0
 
 # Setup
 title:            CoMPAS Architecture
