--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ sonar-project.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+.DS_Store
 
 ### STS ###
 .apt_generated
