Fixed GitHub Actions.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>

--- a/.github/workflows/automate_projects.yml
+++ b/.github/workflows/automate_projects.yml
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: 2022 Alliander N.V.
 #
-# SPDX-License-Identifier: Apache-2.0
+# SPDX-License-Identifier: CC-BY-4.0
 
 name: Add issues and pull request to project boards
 
